Better fix to menu issue, fixed alignment

--- a/static-src/scss/core/_main-header.scss
+++ b/static-src/scss/core/_main-header.scss
@@ -1,6 +1,10 @@
 .main-header {
     @extend %main-menu-container;
     @include box-shadow(0 0 3px 0 rgba(0, 0, 0, 0.5));
+
+    > .grid {
+        overflow: visible;
+    }
 }
 
 .site-logo {
